2022/2022_03_28_kubernetes_and_akira/demo-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-1
spec:
  containers:
  - name: example
    image: rocker/r-ver:4.1.2
    command: ['sh', '-c', 'sleep infinity']
    resources:
      requests:
        memory: 500M
        cpu: 1
      limits:
        memory: 500M
        cpu: 1
  automountServiceAccountToken: false
  restartPolicy: OnFailure
