2022/2022_03_28_kubernetes_and_akira/demo-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-2
spec:
  containers:
  - name: example
    image: ubuntu:latest
    command: ['sh', '-c', 'sleep infinity']
    resources:
      requests:
        memory: 500M
        cpu: 1
      limits:
        memory: 500M
        cpu: 1
    volumeMounts:
    - mountPath: "/storage"
      name: storage
  automountServiceAccountToken: false
  restartPolicy: OnFailure
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: example-2-pvc
